--- a/Facundo Salmerón/Etapas/3- Desarrollo del Web Service/WebService/.recommenders/caches/identified-project-coordinates.json
+++ b/Facundo Salmerón/Etapas/3- Desarrollo del Web Service/WebService/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Users\\usuario\\Desktop\\FICH UNL\\PROYECTO FINAL DE CARRERA\\Facundo Salmerón\\Etapas\\3- Desarrollo del Web Service\\WebService\\EncuestasFCM","type":"PROJECT","hints":{"PROJECT_NAME":"EncuestasFCM"}},"com.fsalmeron.encuestasfcm:EncuestasFCM:1.0.0"]]
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_131","type":"JRE","hints":{}},"jre:jre:1.8.0"]]
